--- a/index.html
+++ b/index.html
@@ -99,13 +99,12 @@
         </div>
     </nav>
 
+    <!-- Carousel -->
     <div id="carouselIndicatorsMobile" class="carousel slide carousel-fade d-md-none border-bottom" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
         </ol>
         <div class="carousel-inner">
-
-            <!--  -->
 
             <div class="carousel-item active">
                 <img src="./banners-novos/Alliance-Rep-Brazil-Customer---2022---Site.png" class="d-block w-100 h-100" alt="...">
@@ -243,6 +242,7 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+    <!-- Carousel -->
 
     <main id="main" class="border-top">
 
@@ -984,10 +984,36 @@
                     <i class="bi bi-linkedin mb-5" style="font-size: 1.8rem; opacity: .9;"></i>
                     <span class="sr-only">LinkedIn</span>
                 </a>
-                <p class="mt-3" style="opacity: .5"> © 2021 Dev 4 Things <span class="d-none d-md-inline">-</span> <br class="d-md-none"> Desenvolvido pela <a href="https://mazag.com.br" class="text-light" target="_blank" rel="noopener">Agência Mazag</a></p>
+                <p class="mt-3" style="opacity: .5"> © 2023 Dev 4 Things <span class="d-none d-md-inline">-</span> <br class="d-md-none"> Desenvolvido pela <a href="https://mazag.com.br" class="text-light" target="_blank" rel="noopener">Agência Mazag</a></p>
             </div>
         </div>
     </footer>
+
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+    <script>
+        window.addEventListener("load", function() {
+            window.cookieconsent.initialise({
+                "palette": {
+                    "popup": {
+                        "background": "#000"
+                    },
+                    "button": {
+                        "background": "#FFC601",
+                        "text": "#000000",
+                        "border": "#FFC601"
+                    }
+                },
+                "position": "bottom-left",
+                "content": {
+                    "message": "Armazenamos dados temporariamente para melhorar a sua experiência de navegação e recomendar conteúdo de seu interesse. Ao utilizar nossos serviços, você concorda com tal monitoramento.",
+                    "dismiss": "Entendi!",
+                    "link": "Leia Mais.",
+                    "href": "/politica-de-privacidade.html"
+                }
+            })
+        });
+    </script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
